<package>
  <name>yaml_cpp_0_6</name>
  <version>0.6.3</version>
  <description>
      Latest version of yaml-cpp. Namespaced to avoid system conflicts.
  </description>
  <url type="repository">https://github.com/cody-c/yaml_cpp_0_6</url>
  <url type="bugtracker">https://github.com/cody-c/yaml_cpp_0_6/issues</url>
  <maintainer email="cdy.chn@gmail.com">Cody</maintainer>
  <license>MIT</license>
  <author>Google</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
